--- a/index.html
+++ b/index.html
@@ -28,91 +28,91 @@
     </address>
   </header>
   <main>
-    <section class="Your_Business">
-      <h1 class="Your_Business_h">Effective Solutions for Your Business</h1>
-      <button type="button" class="Your_Business_button">Order Service</button>
+    <section class="your_business">
+      <h1 class="your_business_h">Effective Solutions for Your Business</h1>
+      <button type="button" class="your_business_button">Order Service</button>
     </section>
     <section class="section_test">
-      <h2 class="section_name_h2">Test</h2>
+      <h2 class="section_name_h-two">Test</h2>
       <ul>
         <li>
-          <h3 class="section_name_h3">Strategy</h3>
+          <h3 class="section_name_h-try">Strategy</h3>
           <p class="section_text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
           </p>
         </li>
         <li>
-          <h3 class="section_name_h3">Punctuality</h3>
+          <h3 class="section_name_h-try">Punctuality</h3>
           <p class="section_text">Bring the key message to the brand's audience for the best price within the shortest possible time.
           </p>
         </li>
         <li>
-          <h3 class="section_name_h3">Diligence</h3>
+          <h3 class="section_name_h-try">Diligence</h3>
           <p class="section_text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.
           </p>
         </li>
         <li>
-          <h3 class="section_name_h3">Technologies</h3>
+          <h3 class="section_name_h-try">Technologies</h3>
           <p class="section_text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
           </p>
         </li>
       </ul>
     </section>
-    <section class="section_Our_Team">
-      <h2 class="section_name_h2">Our Team</h2>
+    <section class="section_our_team">
+      <h2 class="section_name_h-two">Our Team</h2>
       <ul>
-        <li class="section_Our_Team_link">
+        <li class="section_our_team_link">
           <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
-          <h3 class="section_name_h3">Mark Guerrero</h3>
+          <h3 class="section_name_h-try">Mark Guerrero</h3>
           <p class="section_text">Product Designer</p>
         </li>
-        <li class="section_Our_Team_link">
+        <li class="section_our_team_link">
           <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260">
-          <h3 class="section_name_h3">Tom Ford</h3>
+          <h3 class="section_name_h-try">Tom Ford</h3>
           <p class="section_text">Frontend Developer</p>
         </li>
-        <li class="section_Our_Team_link">
+        <li class="section_our_team_link">
           <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260">
-          <h3 class="section_name_h3">Camila Garcia</h3>
+          <h3 class="section_name_h-try">Camila Garcia</h3>
           <p class="section_text">Marketing</p>
         </li>
-        <li class="section_Our_Team_link">
+        <li class="section_our_team_link">
           <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
-          <h3 class="section_name_h3">Daniel Wilson</h3>
+          <h3 class="section_name_h-try">Daniel Wilson</h3>
           <p class="section_text">UI Designer</p>
         </li>
       </ul>
     </section>
     <section>
-      <h2 class="section_name_h2">Our Portfolio</h2>
+      <h2 class="section_name_h-two">Our Portfolio</h2>
       <ul>
         <li>
           <img src="./images/photo-5.jpg" alt="Banking App" width="360" height="300">
-          <h3 class="section_name_h3">Banking App</h3>
+          <h3 class="section_name_h-try">Banking App</h3>
           <p class="section_text">App</p>
         </li>
         <li>
           <img src="./images/photo-4.jpg" alt="Marketing" width="360" height="300">
-          <h3 class="section_name_h3">Cashless Payment</h3>
+          <h3 class="section_name_h-try">Cashless Payment</h3>
           <p class="section_text">Marketing</p>
         </li>
         <li>
           <img src="./images/photo-3.jpg" alt="App" width="360" height="300">
-          <h3 class="section_name_h3">Meditation App</h3>
+          <h3 class="section_name_h-try">Meditation App</h3>
           <p class="section_text">App</p>
         </li>
         <li>
           <img src="./images/photo-2.jpg" alt="Taxi" width="360" height="300">
-          <h3 class="section_name_h3">Taxi Service</h3>
+          <h3 class="section_name_h-try">Taxi Service</h3>
           <p class="section_text">Marketing</p>
         </li>
         <li>
           <img src="./images/photo-1.jpg" alt="Screen" width="360" height="300">
-          <h3 class="section_name_h3">Screen Illustrations</h3>
+          <h3 class="section_name_h-try">Screen Illustrations</h3>
           <p class="section_text">Design</p>
         </li>
         <li>
           <img src="./images/photo.jpg" alt="Online" width="360" height="300">
-          <h3 class="section_name_h3">Online Courses</h3>
+          <h3 class="section_name_h-try">Online Courses</h3>
           <p class="section_text">Marketing</p>
         </li>
       </ul>  
