--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <title>goit-markup-hw-01</title>
 </head>
 <body>
-  <header>
-    <nav>
+  <header class="neader_link">
+    <nav class="nav_link">
       <a href="./index.html" class="logo">Web<span class="logo_text">Studio</span> </a>
       <ul class="class_nav">
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
+        <li><a href="" class="link_header">Studio</a></li>
+        <li><a href="" class="link_header">Portfolio</a></li>
+        <li><a href="" class="link_header">Contacts</a></li>
       </ul>
     </nav>
     <address class="adres">
