--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="nav_link">
       <a href="./index.html" class="logo">Web<span class="logo_text">Studio</span> </a>
       <ul class="class_nav">
-        <li><a href="" class="link_header">Studio</a></li>
+        <li><a href="/ " class="link_header">Studio</a></li>
         <li><a href="" class="link_header">Portfolio</a></li>
         <li><a href="" class="link_header">Contacts</a></li>
       </ul>
