--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-  <title>goit-markup-hw-01</title>
+  <title>goit-markup-hw-02</title>
 </head>
 <body>
   <header class="neader_link">
     <nav class="nav_link">
       <a href="./index.html" class="logo">Web<span class="logo_text">Studio</span> </a>
       <ul class="class_nav">
-        <li><a href="/ " class="link_header">Studio</a></li>
+        <li><a href="./index.html" class="link_header">Studio</a></li>
         <li><a href="" class="link_header">Portfolio</a></li>
         <li><a href="" class="link_header">Contacts</a></li>
       </ul>
     </nav>
     <address class="adres">
-      <ul class="adress_link">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <ul>
+        <li><a href="mailto:info@devstudio.com" class="adress_link">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111" class="adress_link">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
   </header>
